--- a/blog-card.css
+++ b/blog-card.css
@@ -9,7 +9,6 @@
       margin-bottom: 1.6%;
       background: #fff;
       line-height: 1.4;
-      font-family: sans-serif;
       border-radius: 5px;
       overflow: hidden;
       z-index: 0;
@@ -55,7 +54,7 @@
       left: -100%;
       margin: auto;
       transition: left 0.2s;
-      background: rgba(0, 0, 0, 0.6);
+      /* background: rgba(0, 0, 0, 0.6); */
       color: #fff;
       padding: 10px;
       width: 100%;
@@ -97,7 +96,7 @@
     }
     .blog-card .description h1,
     .blog-card .description h2 {
-      font-family: Poppins, sans-serif;
+      /* font-family: Poppins, sans-serif; */
     }
     .blog-card .description h1 {
       line-height: 1;
